--- a/S03 - Time Series/BLU06 - Machine Learning for Time Series/Exercise notebook.ipynb
+++ b/S03 - Time Series/BLU06 - Machine Learning for Time Series/Exercise notebook.ipynb
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
        "2013-01-06       1754"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -633,116 +633,20 @@
      "solution": true
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>customers</th>\n",
-       "      <th>lag1</th>\n",
-       "      <th>lag2</th>\n",
-       "      <th>lag3</th>\n",
-       "      <th>target</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2013-01-03</th>\n",
-       "      <td>1740.0</td>\n",
-       "      <td>1642.0</td>\n",
-       "      <td>1643.0</td>\n",
-       "      <td>1754.0</td>\n",
-       "      <td>1903.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-04</th>\n",
-       "      <td>1642.0</td>\n",
-       "      <td>1643.0</td>\n",
-       "      <td>1754.0</td>\n",
-       "      <td>1577.0</td>\n",
-       "      <td>1740.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-05</th>\n",
-       "      <td>1643.0</td>\n",
-       "      <td>1754.0</td>\n",
-       "      <td>1577.0</td>\n",
-       "      <td>1504.0</td>\n",
-       "      <td>1642.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-06</th>\n",
-       "      <td>1754.0</td>\n",
-       "      <td>1577.0</td>\n",
-       "      <td>1504.0</td>\n",
-       "      <td>1513.0</td>\n",
-       "      <td>1643.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-07</th>\n",
-       "      <td>1577.0</td>\n",
-       "      <td>1504.0</td>\n",
-       "      <td>1513.0</td>\n",
-       "      <td>1449.0</td>\n",
-       "      <td>1754.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            customers    lag1    lag2    lag3  target\n",
-       "date                                                 \n",
-       "2013-01-03     1740.0  1642.0  1643.0  1754.0  1903.0\n",
-       "2013-01-04     1642.0  1643.0  1754.0  1577.0  1740.0\n",
-       "2013-01-05     1643.0  1754.0  1577.0  1504.0  1642.0\n",
-       "2013-01-06     1754.0  1577.0  1504.0  1513.0  1643.0\n",
-       "2013-01-07     1577.0  1504.0  1513.0  1449.0  1754.0"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "store_features = store_cleaned.copy()\n",
-    "store_features['lag1'] = store_features['customers'].shift(-1)\n",
-    "store_features['lag2'] = store_features['customers'].shift(-2)\n",
-    "store_features['lag3'] = store_features['customers'].shift(-3)\n",
-    "store_features['target'] = store.shift()\n",
-    "store_features= store_features.dropna()\n",
-    "store_features.head()"
+    "a = pd.Series(store_features['customers'])\n",
+    "store_features['lag1'] = a.shift(1)\n",
+    "store_features['lag2'] = a.shift(2)\n",
+    "store_features['lag3'] = a.shift(3)\n",
+    "store_features['target'] = a.shift(-1)\n",
+    "store_features = store_features.dropna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -755,19 +659,7 @@
      "solution": false
     }
    },
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-59-5a7e1ae21c4d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mexpected_hash\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'a7b263d903e5a6236b7bb778d31fae57462c18f6d888459a9ade11406c1d3729'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mhashlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msha256\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstore_features\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhexdigest\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mexpected_hash\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "expected_hash = 'a7b263d903e5a6236b7bb778d31fae57462c18f6d888459a9ade11406c1d3729'\n",
     "assert hashlib.sha256(str(store_features.shape).encode()).hexdigest() == expected_hash"
@@ -792,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -809,16 +701,13 @@
     "# Why does the test have 60 values\" Well, basically this just means we are doing 60 one-step-ahead forecasts.\n",
     "# This way we obtain a better estimate of how our one-step-ahead model would perform in real life.\n",
     "\n",
-    "# store_train =\n",
-    "# store_test =\n",
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "store_test = store_features.iloc[-60 :]\n",
+    "store_train = store_features.drop(store_features.tail(60).index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -859,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -870,20 +759,29 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# X_store_train = \n",
-    "# y_store_train =\n",
-    "# model =\n",
-    "# model.fit()\n",
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "features = [feature for feature in store_train.columns if feature != 'target']\n",
+    "X_store_train = store_train[features]\n",
+    "y_store_train = store_train['target']\n",
+    "model = LinearRegression()\n",
+    "model.fit(X_store_train, y_store_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -927,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -938,7 +836,18 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# X_store_test =\n",
     "# y_store_test = \n",
@@ -946,12 +855,15 @@
     "# test_mae = \n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "X_store_test = store_test[features]\n",
+    "y_store_test = store_test['target']\n",
+    "x = np.array(X_store_test)\n",
+    "model.fit(X_store_test, y_store_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -964,7 +876,19 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'test_mae' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-23-b3479b877966>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mexpected_hash\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'8c1f1046219ddd216a023f792356ddf127fce372a72ec9b4cdac989ee5b0b455'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mhashlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msha256\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest_mae\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhexdigest\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mexpected_hash\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'test_mae' is not defined"
+     ]
+    }
+   ],
    "source": [
     "expected_hash = 'a838706ef29b226d8f8222bf3d9dac1e28db739da1196180209956ee02da8bae'\n",
     "assert hashlib.sha256(str(X_store_test.shape).encode()).hexdigest() == expected_hash\n",
