--- a/S03 - Time Series/BLU06 - Machine Learning for Time Series/Exercise notebook.ipynb
+++ b/S03 - Time Series/BLU06 - Machine Learning for Time Series/Exercise notebook.ipynb
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -836,18 +836,7 @@
      "solution": true
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# X_store_test =\n",
     "# y_store_test = \n",
@@ -855,15 +844,15 @@
     "# test_mae = \n",
     "\n",
     "# YOUR CODE HERE\n",
-    "X_store_test = store_test[features]\n",
-    "y_store_test = store_test['target']\n",
-    "x = np.array(X_store_test)\n",
-    "model.fit(X_store_test, y_store_test)"
+    "X_store_test = store_test.dropna()[features]\n",
+    "y_store_test = store_test.dropna()['target']\n",
+    "y_predict = model.predict(X_store_test)\n",
+    "test_mae = mean_absolute_error(y_store_test, y_predict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -878,14 +867,14 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'test_mae' is not defined",
+     "ename": "AssertionError",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-23-b3479b877966>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mexpected_hash\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'8c1f1046219ddd216a023f792356ddf127fce372a72ec9b4cdac989ee5b0b455'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mhashlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msha256\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest_mae\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhexdigest\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mexpected_hash\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'test_mae' is not defined"
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-27-b3479b877966>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mexpected_hash\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'8c1f1046219ddd216a023f792356ddf127fce372a72ec9b4cdac989ee5b0b455'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mhashlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msha256\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest_mae\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhexdigest\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mexpected_hash\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m: "
      ]
     }
    ],
@@ -936,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -951,18 +940,19 @@
    "source": [
     "# Use the same number of lags you used in the previous questions. Use no other features.\n",
     "\n",
-    "# store_multistep_train = \n",
-    "# store_multistep_test =\n",
-    "# predictions = \n",
-    "# test_mae = \n",
+    "store_multistep_test = store_cleaned.iloc[-60:]\n",
+    "store_multistep_train = store_cleaned.drop(store_cleaned.tail(60).index)\n",
+    "predictions = predict_n_periods(series_=store_multistep_train,\n",
+    "                  n_periods=60,\n",
+    "                  model=LinearRegression(),\n",
+    "                  num_periods_lagged=3)\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "test_mae = mean_absolute_error(store_multistep_test, predictions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1009,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1024,17 +1014,14 @@
    "source": [
     "# hint: use the cleaned dataset\n",
     "\n",
-    "# store_multistep_train =\n",
-    "# store_multistep_val =\n",
-    "# store_multistep_test = \n",
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "store_multistep_train = store_cleaned.drop(store_cleaned.tail(120).index)\n",
+    "store_multistep_val = store_cleaned.iloc[-120:-60]\n",
+    "store_multistep_test = store_cleaned.iloc[-60: ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1078,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1099,22 +1086,37 @@
     "# hint: to have no rollings in the predict_n_periods you should send an empty lists of lists: [[]]\n",
     "\n",
     "\n",
-    "#param_grid = \n",
+    "param_grid = {'model': [GradientBoostingRegressor(random_state=1)],\n",
+    "              'num_periods_lagged':np.arange(1,2),\n",
+    "              'num_periods_diffed':np.arange(1,2),\n",
+    "              'weekday':[True,False],\n",
+    "              'month':[True,False],\n",
+    "              'holidays': [True],\n",
+    "              'rolling' : [[np.mean,np.min,np.max,np.std]]\n",
+    "             }\n",
     "\n",
-    "# grid = \n",
+    "grid = ParameterGrid(param_grid)\n",
+    "the_list = []\n",
+    "for params in grid:\n",
+    "    predictions = predict_n_periods(series_=store_multistep_train,\n",
+    "                      n_periods=60,\n",
+    "                      model=params['model'],\n",
+    "                      num_periods_lagged=params['num_periods_lagged'],\n",
+    "                      num_periods_diffed=params['num_periods_diffed'],\n",
+    "                      weekday=params['weekday'],\n",
+    "                      month=params['month'],\n",
+    "                      rolling=[]\n",
+    "                                   )\n",
+    "    val_mae = mean_absolute_error(store_multistep_val, predictions)\n",
+    "    the_list.append(val_mae)\n",
     "\n",
-    "# for params in grid:\n",
-    "     # predictions =\n",
-    "                                    \n",
-    "# best_params = \n",
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "the_index = the_list.index(min(the_list))\n",
+    "best_params = list(grid)[the_index]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1158,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1173,17 +1175,22 @@
    "source": [
     "# use random_state=1 in the gradient boosting regressor.\n",
     "\n",
-    "# store_multistep_train_val = \n",
-    "# predictions = \n",
-    "# test_mae = \n",
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "store_multistep_train_val = store_multistep_train.append(store_multistep_val)\n",
+    "predictions = predict_n_periods(series_=store_multistep_train_val, n_periods=60,\n",
+    "                               model=GradientBoostingRegressor(random_state=1),\n",
+    "                               num_periods_lagged=1,\n",
+    "                               num_periods_diffed=1,\n",
+    "                               weekday = True,\n",
+    "                               month = True,\n",
+    "                               rolling = [],\n",
+    "                               holidays = True\n",
+    "                               )\n",
+    "test_mae = mean_absolute_error(store_multistep_test, predictions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "deletable": false,
     "editable": false,
