--- a/S03 - Time Series/BLU05 - Classical Time Series Models/Exercise notebook.ipynb
+++ b/S03 - Time Series/BLU05 - Classical Time Series Models/Exercise notebook.ipynb
@@ -747,8 +747,8 @@
     "# hint: we expect you to use the AIC since this is for one step forecasting.\n",
     "# hint2: we expect you to use the emissions_train_log, because normally\n",
     "# it's preferable to let SARIMAX chose the diferencing for us\n",
-    "\n",
-    "best_params = get_best_params(emissions_train_log, get_sarimax_grid(), 'aic', 50)\n",
+    "inputs=get_sarimax_grid()\n",
+    "best_params = get_best_params(emissions_train_log, inputs, 'aic', 0)\n",
     "print(\"\\n\")\n",
     "print(best_params)"
    ]
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -820,10 +820,10 @@
    "outputs": [],
    "source": [
     "# don't forget to set enforce_stationarity and enforce_invertibility as False\n",
-    "\n",
+    " \n",
     "model =  SARIMAX(emissions_train_log,\n",
-    "                order=(p, d, q),\n",
-    "                seasonal_order=(P, D, Q, S),\n",
+    "                order=(1, 1, 1),\n",
+    "                seasonal_order=(1, 0, 1, 12),\n",
     "                enforce_stationarity=False,\n",
     "                enforce_invertibility=False)\n",
     "results = model.fit()\n",
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -891,18 +891,14 @@
    },
    "outputs": [],
    "source": [
-    "# hint: check the end of notebook 2\n",
-    "\n",
-    "# predicted_mean_delogged = \n",
-    "mae = get_mae()\n",
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# hint: check the end of notebook \n",
+    "predicted_mean_delogged_loc = predicted_mean.map(np.exp)[1:]\n",
+    "mae = mean_absolute_error(emissions_train[1:], predicted_mean_delogged_loc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -942,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -955,16 +951,13 @@
    },
    "outputs": [],
    "source": [
-    "# baseline = \n",
-    "# mae_baseline = \n",
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "baseline = emissions_train.shift(1)\n",
+    "mae_baseline = mean_absolute_error(emissions_train[1:], baseline[1:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1004,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1021,19 +1014,16 @@
     "# hint2: what did we say in the learning notebook 3 about the size of the prediction \n",
     "# window (lenght of the validation set) ?\n",
     "\n",
-    "# prediction_window = \n",
-    "# predictions = \n",
-    "# predicted_mean = \n",
-    "# predicted_mean_delogged = \n",
-    "# mae = \n",
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "prediction_window = len(emissions_test)\n",
+    "predictions = results.get_forecast(prediction_window)\n",
+    "predicted_mean = predictions.predicted_mean\n",
+    "predicted_mean_delogged = predicted_mean.map(np.exp)\n",
+    "mae = mean_absolute_error(emissions[-prediction_window:], predicted_mean_delogged)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1103,15 +1093,21 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0%, 1.6%, 3.1%, 4.7%, 6.2%, 7.8%, 9.4%, 10.9%, "
+     ]
+    }
+   ],
    "source": [
     "# hint1: this is multi-step forecasting so we expect you to use the validation split method.\n",
     "\n",
-    "# prediction_window = \n",
-    "# best_params_multistep = \n",
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "prediction_window = len(emissions_test)\n",
+    "best_params_multistep = get_best_params(emissions_train_log, get_sarimax_grid(), 'validation split', prediction_window)\n",
+    "print(best_params_multistep)"
    ]
   },
   {
@@ -1156,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1169,19 +1165,17 @@
    },
    "outputs": [],
    "source": [
-    "# results = \n",
-    "# predictions = \n",
-    "# predicted_mean = \n",
-    "# predicted_mean_delogged = \n",
-    "# mae =\n",
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "model= SARIMAX(emissions_train_log, order=(1,0,1), seasonal_order=(1,0,1,12), enforce_stationarity=False, enforce_invertibility=False)\n",
+    "results = model.fit()\n",
+    "predictions = results.get_forecast(prediction_window)\n",
+    "predicted_mean = predictions.predicted_mean\n",
+    "predicted_mean_delogged =  predicted_mean.map(np.exp)\n",
+    "mae = mean_absolute_error(emissions_test[1:], predicted_mean_delogged[1:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "deletable": false,
     "editable": false,
