--- a/S03 - Time Series/BLU04 - Time Series Concepts/Exercise notebook.ipynb
+++ b/S03 - Time Series/BLU04 - Time Series Concepts/Exercise notebook.ipynb
@@ -906,7 +906,7 @@
     "total_sales_per_day['total_sales_per_day_2016_2_weeks_before'] = total_sales_per_day_2_weeks_before.loc['2016']\n",
     "\n",
     "weekly_corr = total_sales_per_day['total_sales_per_day_2016_week_before'].corr(total_sales_per_day['customers'])\n",
-    "biweekly_corr = total_sales_per_day['customers'].corr(total_sales_per_day['total_sales_per_day_2016_2_weeks_before'])\n"
+    "biweekly_corr = total_sales_per_day['customers'].corr(total_sales_per_day['total_sales_per_day_2016_2_weeks_before'])"
    ]
   },
   {
