--- a/S04 - Text Classification/BLU08 - Dimensionality Reduction/BLU08 - Learning Notebook - Part 2 of 3 - SVD and PCA.ipynb
+++ b/S04 - Text Classification/BLU08 - Dimensionality Reduction/BLU08 - Learning Notebook - Part 2 of 3 - SVD and PCA.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,9 +129,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 3 1 1 3 1]\n",
+      " [2 4 2 2 4 2]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "A = np.array([\n",
     "    [1, 2],\n",
@@ -169,9 +188,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 6.95398321e+01 -1.21655365e-15  4.60167922e-01  5.25800857e-18\n",
+      " -2.43843353e-34 -1.95941218e-31]\n",
+      "[[-2.65922637e-01 -8.66025404e-01  4.23420773e-01  1.65446623e-03\n",
+      "  -7.65712196e-06 -5.36438614e-03]\n",
+      " [-5.98807400e-01 -2.18166397e-15 -3.76071400e-01 -7.07105491e-01\n",
+      "  -7.28312970e-04 -5.10237661e-01]\n",
+      " [-2.65922637e-01  2.88675135e-01  4.23420773e-01 -5.51488743e-04\n",
+      "  -8.04291444e-04 -5.63466260e-01]\n",
+      " [-2.65922637e-01  2.88675135e-01  4.23420773e-01 -5.51488743e-04\n",
+      "  -7.06700087e-01  2.82427395e-01]\n",
+      " [-5.98807400e-01 -2.00819163e-15 -3.76071400e-01  7.07105491e-01\n",
+      "   7.28312970e-04  5.10237661e-01]\n",
+      " [-2.65922637e-01  2.88675135e-01  4.23420773e-01 -5.51488743e-04\n",
+      "   7.07512035e-01  2.86403251e-01]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Compute eigenvalues and vectors of square matrix\n",
     "lmbU, U = np.linalg.eig(A_mul)\n",
@@ -223,9 +263,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix to decompose:\n",
+      "[[5 0 2 4]\n",
+      " [2 6 1 2]]\n"
+     ]
+    }
+   ],
    "source": [
     "A = np.array([\n",
     "    [5, 0, 2, 4],\n",
@@ -249,9 +299,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Eigenvectors:\n",
+      "[[ 0.70710678 -0.70710678]\n",
+      " [ 0.70710678  0.70710678]]\n",
+      "\n",
+      "Eigenvalues:\n",
+      "[65. 25.]\n"
+     ]
+    }
+   ],
    "source": [
     "AT = A.T\n",
     "AAT = np.matmul(A, AT)\n",
@@ -275,9 +339,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Eigenvectors:\n",
+      "[[-0.61394061  0.42426407 -0.65212952  0.02882113]\n",
+      " [-0.52623481 -0.84852814 -0.05434413  0.00240176]\n",
+      " [-0.26311741  0.14142136  0.14677136  0.87917782]\n",
+      " [-0.52623481  0.28284271  0.74177622 -0.47561532]]\n",
+      "\n",
+      "Eigenvalues:\n",
+      "[ 6.50000000e+01  2.50000000e+01 -3.82164848e-15 -3.38886760e-17]\n"
+     ]
+    }
+   ],
    "source": [
     "ATA = np.matmul(AT, A)\n",
     "\n",
@@ -302,9 +382,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "S matrix:\n",
+      "[[8.06225775 0.         0.         0.        ]\n",
+      " [0.         5.         0.         0.        ]]\n"
+     ]
+    }
+   ],
    "source": [
     "S_shape = A.shape\n",
     "\n",
@@ -327,9 +417,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original matrix:\n",
+      "[[5 0 2 4]\n",
+      " [2 6 1 2]]\n",
+      "\n",
+      "Factorization U S V^T\n",
+      "[[-5.  0. -2. -4.]\n",
+      " [-2. -6. -1. -2.]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Original matrix:\")\n",
     "print(A)\n",
@@ -349,9 +453,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix sign:\n",
+      "-1.0\n",
+      "\n",
+      "Factorization U S V^T disambiguated:\n",
+      "[[ 5. -0.  2.  4.]\n",
+      " [ 2.  6.  1.  2.]]\n"
+     ]
+    }
+   ],
    "source": [
     "sign = USVT.sum()/abs(USVT.sum())\n",
     "\n",
