--- a/S04 - Text Classification/BLU08 - Dimensionality Reduction/BLU08 - Learning Notebook - Part 1 of 3 - Dimensionality Reduction and Feature Selection.ipynb
+++ b/S04 - Text Classification/BLU08 - Dimensionality Reduction/BLU08 - Learning Notebook - Part 1 of 3 - Dimensionality Reduction and Feature Selection.ipynb
@@ -865,7 +865,7 @@
    },
    "outputs": [],
    "source": [
-    "chi_values, p_values = chi2(stat_X_train, stat_y_train)"
+    "Get"
    ]
   },
   {
